--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       id="footer"
     >
       <div class="container py-4">
-        <div class="row gy-4 gx-5">
+        <div class="row gy-4">
           <div class="col-lg-4 col-md-6 text-white">
             <h5 class="h1 fw-semibold">Footer</h5>
             <p class="small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, labore est. Sunt voluptate quidem error aspernatur fugiat consequatur minus facere.</p>
